[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "myrunner"
authors = [{ name = "Molkov Daniil", email = "molkovdanil@gmail.com" }]
description = "Create declarative runs and run it easily!"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["pygohcl", "jsonschema"]
