[build-system]
requires = ["setuptools", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "myrunner"
authors = [{ name = "Molkov Daniil", email = "molkovdanil@gmail.com" }]
description = "Create declarative runs and run then easily!"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["pygohcl", "jsonschema"]
keywords = ["declarative", "runs", "automation"]
dynamic = ['version']

[tool.setuptools_scm]
version_file = "myrunner/_version.py"

[project.scripts]
myrunner = "myrunner.myrunner:main"
